--- a/subscribe-assess-publish/build.gradle
+++ b/subscribe-assess-publish/build.gradle
@@ -26,6 +26,18 @@ dependencies {
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
 
+    // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-core
+    compile group: 'org.igniterealtime.smack', name: 'smack-core', version: '4.2.3'
+
+    // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-extensions
+    compile group: 'org.igniterealtime.smack', name: 'smack-extensions', version: '4.2.3'
+
+    // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-tcp
+    compile group: 'org.igniterealtime.smack', name: 'smack-tcp', version: '4.2.3'
+
+    // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-java7
+    compile group: 'org.igniterealtime.smack', name: 'smack-java7', version: '4.2.3'
+
     // Assessor with Remote capabilities...
     compile group: 'Assessor', name: "Assessor", version: '1.0.0'
 
