--- a/publish-assessment-content/build.gradle
+++ b/publish-assessment-content/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-java7
     compile group: 'org.igniterealtime.smack', name: 'smack-java7', version: '4.2.3'
 
+    // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-experimental
+    compile group: 'org.igniterealtime.smack', name: 'smack-experimental', version: '4.3.0-beta1'
 }
