--- a/subscribe-assess-publish/build.gradle
+++ b/subscribe-assess-publish/build.gradle
@@ -27,16 +27,24 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
 
     // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-core
-    compile group: 'org.igniterealtime.smack', name: 'smack-core', version: '4.2.3'
+    compile group: 'org.igniterealtime.smack', name: 'smack-core', version: '4.3.0-beta1'
 
     // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-extensions
-    compile group: 'org.igniterealtime.smack', name: 'smack-extensions', version: '4.2.3'
+    compile group: 'org.igniterealtime.smack', name: 'smack-extensions', version: '4.3.0-beta1'
+
+    // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-experimental
+    compile group: 'org.igniterealtime.smack', name: 'smack-experimental', version: '4.3.0-beta1'
 
     // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-tcp
-    compile group: 'org.igniterealtime.smack', name: 'smack-tcp', version: '4.2.3'
+    compile group: 'org.igniterealtime.smack', name: 'smack-tcp', version: '4.3.0-beta1'
 
     // https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-java7
-    compile group: 'org.igniterealtime.smack', name: 'smack-java7', version: '4.2.3'
+    compile group: 'org.igniterealtime.smack', name: 'smack-java7', version: '4.3.0-beta1'
+
+    // https://mvnrepository.com/artifact/org.codehaus.groovy.modules.http-builder/http-builder
+    compile (group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.7.1') {
+        exclude group: 'xerces', module: 'xercesImpl'
+    }
 
     // Assessor with Remote capabilities...
     compile group: 'Assessor', name: "Assessor", version: '1.0.0'
